# SDL2_Template_CPP

./: CMakeLists.txt
Template/: CMakeLists.txt  application.cpp  application.h  buttonManager.h  fontManager.h  imageManager.cpp  imageManager.h  main.cpp  size.h
